--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,7 +1,8 @@
+
 [uwsgi]
-master=true      
-socket=127.0.0.1:8000 
-processes=4      
+master=true
+socket=127.0.0.1:8000
+processes=4
 socket-timeout=300
 reload-mercy=10
 vacuum=true
@@ -10,6 +11,6 @@ limit-as=1024
 listen=128
 buffer-size=30000
 memory-report=true
-home=/path/to/virtualenv
+home=/root/.local/share/virtualenvs/heartbeats-7o-A-T02
 chdir=/docker/heartbeats/src
 module=heartbeats.wsgi:application
